[package]
authors = ["mgrouch <mgrushinskiy@gmail.com>"]
categories = ["embedded", "hardware-support"]
description = "Fork of Michael Moravec Rust I²C/SPI driver for AS3935 Franklin Lightning Sensor IC"
edition = "2021"
homepage = "https://github.com/bareboat-necessities/as3935-rs"
keywords = ["raspberry", "as3935", "i2c", "spi", "lightning"]
license = "MIT"
name = "as3935-bbn"
readme = "README.md"
repository = "https://github.com/bareboat-necessities/as3935-rs"
version = "0.1.0-pre.2"

[badges]
travis-ci = { repository = "bareboat-necessities/as3935-rs", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
log = "0.4.6"
rppal = "0.14.1"

[dev-dependencies]
chrono = "0.4.7"
simple_logger = "1.3.0"
simple-signal = "1.1.1"
